<resources>
    <string name="app_name">AddRemoveViewModel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item">Add Item</string>
    <string name="image_link">Image Link</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="update_item">Update Item</string>
</resources>