<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".add_remove.fragment.AddFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edImageLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/image_link" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edImageTitle"
        android:layout_width="match_parent"
        android:hint="@string/title"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_item" />

</androidx.appcompat.widget.LinearLayoutCompat>